@@ -7,7 +7,8 @@
 <body>
 <b>1.1.1</b>
 <ul>
-<li>Better changelog ;-)</li>
+<li>Nicer changelog ;-)</li>
+<li>Android 2.2 - added move application to SD card support.</li>
 </ul>
 <b>1.1.0</b>
 <ul>
